# osf-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: osf_ids_remaining.txt
data/raw/: successful_ids-total.txt
scripts/: analyse.py  discover_ids.py  process_registrations.py  remaining_ids.py  scrape_osf.py  test_rate_limit.py
src/osf/: __init__.py  id_scraper.py
src/osf_scraper/: discovery.py
tests/: test_cli.py  test_id_scraper.py  test_process_registrations.py  test_token_bucket.py
